# outr-simulation

./: .gitignore  README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: outr_2dnav.pc  outr_control.pc  outr_description.pc  outr_gazebo.pc  realsense2_camera.pc  realsense2_description.pc  realsense_gazebo_plugin.pc
devel/share/outr_2dnav/cmake/: outr_2dnavConfig.cmake
devel/share/outr_control/cmake/: outr_controlConfig.cmake
devel/share/outr_description/cmake/: outr_descriptionConfig.cmake
install/: _setup_util.py
install/lib/pkgconfig/: outr_control.pc  outr_gazebo.pc  realsense2_camera.pc  realsense2_description.pc  realsense_gazebo_plugin.pc
install/share/outr_description/: package.xml
install/share/outr_description/cmake/: outr_descriptionConfig.cmake
src/outr_2dnav/: CMakeLists.txt  costmap_common_params.yaml  global_costmap_params.yaml  package.xml
src/outr_2dnav/launch/: move_base.launch
src/outr_control/: CMakeLists.txt  package.xml
src/outr_control/launch/: keyboard_teleop.launch
src/outr_description/: CMakeLists.txt
src/outr_description/launch/: outr.rviz  outr_rviz.launch  pointcloudToLaserScan.launch
src/outr_description/urdf/: _d435.urdf.xacro  outr.dae  outr.gazebo  outr.xacro
src/outr_gazebo/: CMakeLists.txt  package.xml
src/outr_gazebo/launch/: empty_world.launch  only_outr.launch  outr.launch  outr_gazebo_full.launch
src/outr_gazebo/scripts/: circle_mode.py  square_mode.py
src/outr_gazebo/src/: square_mode.cpp
src/outr_gazebo/worlds/: outr.world
(+12 files in other folders)
